--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,36 @@
-@import url("border-box.css");
+/* Setting Up
+======================*/
 
 html {
     font-family: "Helvetica", sans-serif;
     background-color: #0d1015;
+    font-size: 16px; 
 }
+
+body {
+    margin: 0; /* removing margins in body */
+}
+
+* {
+    box-sizing: border-box;
+  }
+  
+[class*="col-"] {
+  float: left;
+}
+  
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
 
 /* Colours 
 ======================*/
@@ -12,25 +39,43 @@ html {
     color: #f8b031;
 }
 
-/* Header 
+hr {
+    display: block; 
+    border: 1px solid #f8b031;
+    width: 93vw; 
+    margin: 25px 0 15px 0;
+}
+
+/* Header
 ======================*/
+
 .header {
     color:#f8b031;
     font-size: 5rem;
-    display: inline-flex;
-    background-color: green;
+    position: fixed;
+    bottom: 0.3em;
+    left: 0.3em;
 }
 
 .header .name {
-    background-color: red;
+    font-size: 1.2em;
+    width: 0.6vw;
+    line-height: 0.85em;
     margin: 0;
 }
 
-.header .title {
-    background-color: blue;
+.header .last-name {
+    margin-left: 1.95em; 
 }
 
-/* Navigation
+.header .title {
+    align-items: flex-end;
+    margin: 0;
+    font-size: 0.7em;
+    line-height: 0.6em;
+}
+
+/* Navigation 
 ======================*/
 
 .nav ul {
@@ -41,3 +86,25 @@ html {
 .nav .nav-desc {
     text-emphasis: bold;
 }
+
+.square {
+    width: 8em;
+    height: 8em;
+    background-color:#f8b031;
+    position: fixed;
+    right: 1.4em;
+    bottom: 9.5em;
+    z-index: -1;
+  }
+  
+.square:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 6em;
+    height: 6em;
+    background-color: #0d1015;
+    border-radius: 50%;
+  }
