--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,22 +1,4 @@
 @font-face {
     font-family: "ClashDisplay";
-    src: url("../fonts/ClashDisplay-Regular.otf") format("opentype");
-}
-
-@font-face {
-    font-family: "ClashDisplay-Bold";
-    src: url("../fonts/ClashDisplay-Bold.otf") format("otf");
-    font-weight: 800;
-}
-
-@font-face {
-    font-family: "ClashDisplay-Light";
-    src: url("../fonts/ClashDisplay-Light.otf") format("otf");
-    font-weight: 400;
-}
-
-@font-face {
-    font-family: "ClashDisplay-Medium";
-    src: url("../fonts/ClashDisplay-Medium.otf") format("otf");
-    font-weight: 700;
+    src: url("../fonts/ClashDisplay-Variable.ttf") format("truetype");
 }
