--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,11 +5,11 @@
 html {
     font-family: "ClashDisplay", sans-serif;
     background-color: #0d1015;
-    font-size: 16px; 
 }
 
 body {
     margin: 0; /* removing margins in body */
+    border: 1px solid #f8b031;
 }
 
 /* Colours 
@@ -31,15 +31,14 @@ hr {
 
 .header {
     color:#f8b031;
-    font-size: 5rem;
     position: relative;
-    margin: 0.3em;
+    margin: 20px;
     border: 1px solid #f8b031;
     padding: 35px;
 }
 
 .header .name {
-    font-size: 0.8em;
+    font-size: 1em;
     display: flex;
     flex-wrap: nowrap;
     line-height: 0.85em;
@@ -49,7 +48,7 @@ hr {
 .header .title {
     align-items: flex-end;
     margin: 0;
-    font-size: 0.6em;
+    font-size: 1em;
     line-height: 0.6em;
 }
 
@@ -58,7 +57,7 @@ hr {
 
 .nav {
     max-width: 100%;
-    margin: 1.2em;
+    margin: 20px;
 }
 
 .nav ul {
@@ -69,7 +68,6 @@ hr {
     justify-content: left;
     border: 1px solid #f8b031;
     padding: 0.3em;
-    margin: 0.3em;
 }
 
 .nav li {
@@ -78,7 +76,8 @@ hr {
 
 #nav-name {
     max-width: 10px;
-    margin-right: 3em;
+    margin-right: 5em;
+    transition: 800ms ease-in-out; 
 }
 
 /* Content 
@@ -90,19 +89,59 @@ hr {
     left: 0.3em;
 }
 
+.hero-section h3 {
+    border: 1px solid #f8b031;
+}
+
 #greeting {
-    font-size: 0.4em;
+    font-size: 1.2em;
+}
+
+#nameImputPrompt {
+    font-size: 1em;
 }
 
 .intro {
-    font-size: 0.6em;
-    margin-top: -0.5em;
+    font-size: 2em;
+    margin-top: -0.6em;
     margin-bottom: -0.1em;
 }
 
-.job:hover {
-    text-decoration-line: underline;
-    background-color: #f8b031;
-    color: #0d1015;
-    cursor: alias;
+.job-title {
+    font-size: 1.5em;
+    margin-top: -0.1em;
+    margin-bottom: -0.1em;
 }
+
+.job {
+    position: relative;
+    color: #f8b031;
+    transition: 200ms ease-in-out;
+}
+
+.job::before {  
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    background: #f8b031;
+    color: #f8b031;
+  }
+  
+.job:hover::before {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+    }
+
+.job:hover {
+    color: #0d1015;
+}
+  
+.job::before {
+    content: " ";
+    display: block;
+    position: absolute;
+    inset: 0 0 0 0;
+    background: #f8b031;
+    z-index: -1;
+    transition: transform .3s ease;
+  }
+  
